[project]
name = "poetry-env" 
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autodistill (>=0.1.29,<0.2.0)",
    "ultralytics (>=8.3.96,<9.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "fiftyone (>=1.4.0,<2.0.0)",
    "mlflow (>=2.21.1,<3.0.0)",
    "dvc (>=3.59.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_env", from = "src"}]


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
