[project]
name = "annotation-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "autodistill (>=0.1.29,<0.2.0)",
    "autodistill-grounding-dino (>=0.1.4,<0.2.0)",
    "autodistill-grounded-sam (>=0.1.2,<0.2.0)",
    "ultralytics (>=8.3.97,<9.0.0)",
    "fiftyone (>=1.4.0,<2.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "open-clip-torch (>=2.31.0,<3.0.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "kedro (>=0.19.12,<0.20.0)",
    "apache-airflow (>=2.10.5,<3.0.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "sam2 (>=1.1.0,<2.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "ninja (>=1.11.1.4,<2.0.0.0)",
    "packaging (>=24.2,<25.0)",
    "samv2 (>=0.0.4,<0.0.5)",
    "roboflow (>=1.1.58,<2.0.0)",
    "transformers (==4.49.0)",
]

[tool.poetry]
packages = [{include = "annotation_env", from = "src"}]


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
